--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
 <h1>Semester 1</h1>
 
 <a class="myButton" onclick="clickFunctionUnits" id="btn1" href="#">Units</a>
-<a class="myButton" onclick="window.location.href='http://www.crphysics.com/button-vectors.html'" id="btn2" href="#">Vectors</a>
+<a class="myButton" onclick="window.location.href='http://www.jasonlerner.github.io/Vectors.html'" id="btn2" href="#">Vectors</a>
 <a class="myButton" onclick="clickFunctionForces" id="btn3" href="#">Forces</a>
 <a class="myButton" onclick="clickFunctionKinematics" id="btn4" href="#">Kinematics</a>
 <a class="myButton" onclick="clickFunctionEnergy" id="btn5" href="#">Energy</a>
