--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@ background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
 
 </div>
 
-	<embed width="300" height="180" src="https://youtu.be/ZihywtixUYo" type="application/x-shockwave-flash">
-	</embed>
+	<video width="320" height "240" controls>
+		<source src="MapOfPhysics.mp4" type="video/mp4">
+	</video>
 	
 <script>
 
