--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<DOCTYPE! html>
+
 <html>
 <head>
 
@@ -140,27 +142,28 @@ background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
 
 <div class="header">
 
-<img src="logo1.jpg" onclick="clickFunctionLogo" width="75" height="75" class="logo">
-<span class="slogan">Physics: Cane Ridge</span>
+	<img src="logo1.jpg" onclick="clickFunctionLogo" width="75" height="75" class="logo">
+	<span class="slogan">Physics: Cane Ridge</span>
 
 </div>
 
 <div class="workarea">
 
-<h1>Semester 1</h1>
+	<h1>Semester 1</h1>
 
-<a class="myButton" onclick="clickFunctionUnits" id="btn1" href="#">Units</a>
-<a class="myButton" onclick="clickFunctionVectors" id="btn2" href="#">Vectors</a>
-<a class="myButton" onclick="clickFunctionForces" id="btn3" href="#">Forces</a>
-<a class="myButton" onclick="clickFunctionKinematics" id="btn4" href="#">Kinematics</a>
-<a class="myButton" onclick="clickFunctionEnergy" id="btn5" href="#">Energy</a>
-<a class="myButton" onclick="clickFunctionMomentum" id="btn6" href="#">Momentum</a>
+	<a class="myButton" onclick="clickFunctionUnits" id="btn1" href="#">Units</a>
+	<a class="myButton" onclick="clickFunctionVectors" id="btn2" href="#">Vectors</a>
+	<a class="myButton" onclick="clickFunctionForces" id="btn3" href="#">Forces</a>
+	<a class="myButton" onclick="clickFunctionKinematics" id="btn4" href="#">Kinematics</a>
+	<a class="myButton" onclick="clickFunctionEnergy" id="btn5" href="#">Energy</a>
+	<a class="myButton" onclick="clickFunctionMomentum" id="btn6" href="#">Momentum</a>
 
-<div class="myImage"></div>
+	<div class="myImage"></div>
 
-<p>
-"If you can't explain it simply, you don't understand it well enough." <br /> - Albert Einstein
-</p>
+	<p>
+		"If you can't explain it simply, you don't understand it well enough." <br /> - Albert Einstein
+	</p>
+	
 	<video width="320" height "240" controls>
 		<source src="MapOfPhysics.mp4" type="video/mp4">
 	</video>
