--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 }
 
 body {
-background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
+background: #ffffff url("images/LHCParticleCollisions.png") no-repeat right top;
 }
 
 .slogan{
@@ -92,37 +92,37 @@ background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
 }
 
 #btn1:hover ~ .myImage {
-	background: url("SpicyUnits.png");
+	background: url("images/SpicyUnits.png");
 	transition: background linear 0.1s;
 }
 
 #btn2:hover ~ .myImage {
-	background: url("SpicyVectors.jpg");
+	background: url("images/SpicyVectors.jpg");
 	transition: background linear 0.1s;
 }
 
 #btn3:hover ~ .myImage {
-	background: url("SpicyForces.jpg");
+	background: url("images/SpicyForces.jpg");
 	transition: background linear 0.1s;
 }
 
 #btn4:hover ~ .myImage {
-	background: url("AngryBirdsKinematics.gif");
+	background: url("images/AngryBirdsKinematics.gif");
 	transition: background linear 0.1s;
 }
 
 #btn5:hover ~ .myImage {
-	background: url("SpicyEnergy.jpg");
+	background: url("images/SpicyEnergy.jpg");
 	transition: background linear 0.1s;
 }
 
 #btn6:hover ~ .myImage {
-	background: url("SpicyMomentum.jpg");
+	background: url("images/SpicyMomentum.jpg");
 	transition: background linear 0.1s;
 }
 
 .myImage {
-	background: url("CERNProtonCollision.jpg");
+	background: url("images/CERNProtonCollision.jpg");
 	width: 600px;
 	height: 200px;
 	display: block;
@@ -142,7 +142,7 @@ background: #ffffff url("LHCParticleCollisions.png") no-repeat right top;
 
 <div class="header">
 
-	<img src="logo1.jpg" onclick="clickFunctionLogo" width="75" height="75" class="logo">
+	<img src="images/logo1.jpg" onclick="clickFunctionLogo" width="75" height="75" class="logo">
 	<span class="slogan">Physics: Cane Ridge</span>
 
 </div>
