--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 }
 
 body {
-background: #ffffff url("images/LHCParticleCollisions.png") no-repeat right top;
+background: #000000 url("images/LHCParticleCollisions.png") no-repeat right top;
 }
 
 .slogan{
@@ -165,7 +165,7 @@ background: #ffffff url("images/LHCParticleCollisions.png") no-repeat right top;
 	</p>
 	
 	<video width="320" height "240" controls>
-		<source src="MapOfPhysics.mp4" type="video/mp4">
+		<source src="videos/MapOfPhysics.mp4" type="video/mp4">
 	</video>
 </div>
 
